[package]
name = "ece"
version = "1.1.1"
authors = ["Edouard Oger <eoger@fastmail.com>", "JR Conlin <jrconlin@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
repository = "https://github.com/mozilla/rust-ece"
description = "Encrypted Content-Encoding for HTTP Rust implementation."
keywords = ["http-ece", "web-push"]

[dependencies]
byteorder = "1.3"
failure = "0.1"
failure_derive = "0.1"
base64 = "0.10"
hkdf = { version = "0.7", optional = true }
lazy_static = { version = "1.2", optional = true }
once_cell = "1.0.0"
openssl = { version = "0.10", optional = true }
serde = { version = "1.0.91", features = ["derive"], optional = true }
sha2 = { version = "0.8", optional = true }

[dev-dependencies]
hex = "0.3"

[features]
default = ["backend-openssl", "serializable-keys"]
serializable-keys = ["serde"]
backend-openssl = ["openssl", "lazy_static", "hkdf", "sha2"]
